<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main"
    tools:context=".ui.MainMenuActivity">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg_menu" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="12dp"
        android:fontFamily="sans-serif-medium"
        android:shadowColor="#80000000"
        android:shadowDx="0"
        android:shadowDy="2"
        android:shadowRadius="4"
        android:text="@string/txt_menu_title"
        android:textColor="#F2F2F2"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/climbListButton"
        android:layout_width="227dp"
        android:layout_height="80dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="92dp"
        android:text="@string/btn_view_climb_list"
        android:textColor="#FFFFFF"
        app:backgroundTint="#7C4DFF"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/trainingButton"
        android:layout_width="225dp"
        android:layout_height="76dp"
        android:layout_marginStart="93dp"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="93dp"
        android:text="@string/btn_training"
        android:textColor="#FFFFFF"
        app:backgroundTint="#7C4DFF"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>